devoir 01 en cours

--- a/frontend/portfolio/index.html
+++ b/frontend/portfolio/index.html
@@ -13,6 +13,7 @@
         <dir class="headdy">
             <dir class="headbar">
                 <nav class="AppBar">
+                    <img src="https://as1.ftcdn.net/jpg/02/23/12/02/1000_F_223120218_CQ02T3AxOfeZDl7a94WS7xNKCstKIsoK.jpg" class="loupe">
                         <a href="index.html" class="lien">Accueil</a>
                         <a href="#APropos" class="lien">A Propos</a>
                         <a href="#Projects" class="lien">Projet</a>
