--- a/frontend/profil/index.html
+++ b/frontend/profil/index.html
@@ -34,44 +34,83 @@
         </header>
 
         <section class="Profil">
-
-            <img src="https://avatars.githubusercontent.com/u/97993739?s=400&u=cd34ae2a530712ddc27a3b66a5df86db0ca8ea98&v=4" class="avatar">
-            <h2 class="nom_utilisateur">
-                dracken24
-            </h2>
-            <p class="bio">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta beatae impedit hic quos! Corporis est, reprehenderit exercitationem nisi harum esse, ipsa eius nesciunt quisquam adipisci odio ex, enim sunt! Ab!
-            </p>    
+            <div class="banner">
+                <img style="z-index: 0;"  class="cover" src="https://raw.githubusercontent.com/dracken24/portFolio/refs/heads/master/imgs/bgDragon01.jpg">
+                <img style="z-index: 1;"  class="avatar" src="https://avatars.githubusercontent.com/u/97993739?s=400&u=cd34ae2a530712ddc27a3b66a5df86db0ca8ea98&v=4">
+            </div>
+            <div class="infos">
+                <h2 class="nom_utilisateur">
+                    dracken24
+                </h2>
+                <p class="bio">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta beatae impedit hic quos! Corporis est, reprehenderit exercitationem nisi harum esse, ipsa eius nesciunt quisquam adipisci odio ex, enim sunt! Ab!
+                </p>
+            </div>    
 
         </section>    
         
         <section class="amis">
-        <h3>Mes amis</h3>
-        <ul>
-            <li class="btn-grad ami special">Borris</li>
-            <li class="ami">Jeff</li>
-            <li class="ami">Alex</li>
-            <li class="ami">Natacha</li>
-            <li class="ami">Sawsen</li>
-            <li class="ami">Samuel</li>
-            <li class="ami">Saber</li>
-        </ul>
+            <h3>Mes amis</h3>
+            <ul>
+                <li class="btn-grad ami special">
+                    <p>Borris</p>
+                    <button>
+                        Contact
+                    </button>
+                </li>
+                <li class="ami">
+                    <p>Jeff</p>
+                    <button>
+                        Contact
+                    </button>
+                </li>
+                <li class="ami">
+                    <p>Alex</p>
+                    <button>
+                        Contact
+                    </button>
+                </li>
+                <li class="ami">
+                    <p>Natacha</p>
+                    <button>
+                        Contact
+                    </button>
+                </li>
+                <li class="ami">
+                    <p>Sawsen</p>
+                    <button>
+                        Contact
+                    </button>
+                </li>
+                <li class="ami">
+                    <p>Samuel</p>
+                    <button>
+                        Contact
+                    </button>
+                </li>
+                <li class="ami">
+                    <p>Saber</p>
+                    <button>
+                        Contact
+                    </button>
+                </li>
+            </ul>
         </section>
 
         <section class="Contact">
-        <h3>Contactez-Nous</h3>
-        <form>
-            <label>Nom : </label>
-            <input type="text" id="nom" name="nom" placeholder="Entrez votre nom" required/>
-            <label>Email : </label>
-            <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Entrez Votre e-mail"
-            />
-            <button type="submit" class="button">Envoyer</button>
-        </form>
+            <h3>Contactez-Nous</h3>
+            <form>
+                <label>Nom : </label>
+                <input type="text" id="nom" name="nom" placeholder="Entrez votre nom" required/>
+                <label>Email : </label>
+                <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Entrez Votre e-mail"
+                />
+                <button type="submit" class="button">Envoyer</button>
+            </form>
         </section>
 
         <p> Je suis dans une section ? </p>
