--- a/frontend/bootstrap_01/index.html
+++ b/frontend/bootstrap_01/index.html
@@ -3,13 +3,195 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
     <title>Bootstrap 01</title>
 </head>
-<body>
-    <h1 class="text-bg-primary">Yo Bitch !!</h1>
-    <button class="btn btn-primary">Cklick Me</button>
-    <button class="btn btn-warning">Cklick Me maybe</button>
-    <button class="btn btn-danger">Cklick Me NOT</button>
+<body style="background-color: #e4e4e4;">
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-md bg-dark">
+        <div class="container">
+            <a class="navbar-brand text-white" href="#">Navbar</a>
+
+            <button class="navbar-toggler bg-light">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-end">
+                <ul class="navbar-nav">
+                    <li class="nav-item me-3">
+                        <a class="nav-link text-white" href="#">Home</a>
+                    </li>
+                    <li class="nav-item me-3">
+                        <a class="nav-link text-white" href="#">A propos</a>
+                    </li>
+                    <li class="nav-item me-3">
+                        <a class="nav-link text-white" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link text-white dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container p-3">
+        <h1>Liste des personnages</h1>
+    </div>
+
+    <div class="container shadow p-3 bg-body-tertiary rounded">
+        <div class="card col-lg-4 col-md-5 col-6">
+            <img src="https://wallpapers.com/images/hd/ichigo-kurosaki-in-his-shihakusho-ikmsifndhtwz4ug4.jpg" class="card-img-top">
+            <div class="card-body">
+                <h5 class="card-title">Kurosaki Ichigo</h5>
+                <p>Wanted: 3.200.000.000</p>
+                <p class="card-text">Personnage principal de la série Bleach</p>
+                <a href="#" class="btn btn-primary">Voir plus</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container pt-3">
+        <div>
+            <table class="table table-striped table-hover">
+                <thead class="table-dark">
+                    <tr>
+                        <th>Nom</th>
+                        <th>Position</th>
+                        <th>Prix</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Kurosaki Ichigo</td>
+                        <td>Shinigami</td>
+                        <td>3.200.000.000</td>
+                        <td>
+                            <span class="badge bg-success">Alive</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Roronoa Zoro</td>
+                        <td>Bretteur</td>
+                        <td>1.800.000.000</td>
+                        <td>
+                            <span class="badge bg-danger">Dead</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Naruto Uzumaki</td>
+                        <td>Hokage</td>
+                        <td>2.800.000.000</td>
+                        <td>
+                            <span class="badge bg-success">Alive</span>
+                        </td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="container">
+        <h5>Ajouter un personnage</h5>
+        <form action="">
+            <label >Nom</label>
+            <input type="text" name="Nom">
+            <label >Position</label>
+            <input type="text" name="Position">
+            <label >Prix</label>
+            <input type="text" name="Prix">
+            <label >Status</label>
+            <select>
+                <option value="Alive">Alive</option>
+                <option value="Dead">Dead</option>
+            </select>
+
+            <button type="submit" class="btn btn-primary">Ajouter</button>
+        </form>
+    </div>
+
+    <!-- Container -->
+    <!-- <div class="container mt-5" style="background-color: #4b4b4b; margin-bottom: 10px; padding-bottom: 10px;">
+        <h1 class="text-bg-primary">Yo Bitch !!</h1> 
+        <p class="text-bg-success">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+        <button class="btn btn-primary">Cklick Me</button>
+        <button class="btn btn-warning">Cklick Me maybe</button>
+        <button class="btn btn-danger">Cklick Me NOT</button>
+        <button class="btn btn-success">Cklick Me YES</button>
+    </div> -->
+
+    <!-- Grid System -->
+    <!-- <div class="container" style="color: #cbcbcb; background-color: #8f4949;"> -->
+        <!-- Grid System 1 -->
+        <!-- <div class="row">
+            <div class="col border">
+                <h1>1</h1>
+            </div>
+            <div class="col border">
+                <h1>2</h1>
+            </div>
+            <div class="col border">
+                <h1>3</h1>
+            </div>
+            <div class="col border">
+                <h1>4</h1>
+            </div>
+            <div class="col border">
+                <h1>5</h1>
+            </div>
+            <div class="col border">
+                <h1>6</h1>
+            </div>
+        </div> -->
+        
+        <!-- Grid System 2 -->
+        <!-- <div class="row">
+            <div class="col-9 border">
+                <h1>A</h1>
+            </div>
+            <div class="col-3 border">
+                <h1>B</h1>
+            </div>
+
+        </div> -->
+    <!-- </div> -->
+
+    <!-- <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-lg-3 border p-2 text-white" style="background-color: #4b4b4b;">
+                <h1>Coll 1</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button class="btn btn-primary">Cklick Me</button>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3 border p-2 text-white" style="background-color: #4b4b4b;">
+                <h1>Coll 2</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button class="btn btn-primary">Cklick Me</button>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3 border p-2 text-white" style="background-color: #4b4b4b;">  
+                <h1>Coll 3</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button class="btn btn-primary">Cklick Me</button>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3 border p-2 text-white" style="background-color: #4b4b4b;">
+                <h1>Coll 4</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button class="btn btn-primary">Cklick Me</button>
+            </div>
+        </div>
+    </div> -->
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
