--- a/frontend/bootstrap_01/Bootstrap_Part_1 1.html
+++ b/frontend/bootstrap_01/Bootstrap_Part_1 1.html
@@ -6,6 +6,19 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 	<title>Test Bootstrap</title>
+
+	<style>
+		.dark-mode
+		{
+			background-color: black;
+			color: white;
+		}
+
+		body
+		{
+			transition: background-color 0.5s, color 0.5s;
+		}
+	</style>
 </head>
 <body>
 
@@ -38,6 +51,10 @@
 						<li><a class="dropdown-item" href="#">Creer un compte</a></li>
 					</ul>
 				</li>
+				<button class="btn btn-light" id="darkModeBtn">
+					<!-- <button class="btn btn-light" onclick="DarkMode()"></button> -->
+					🌘
+				</button>
 			</ul>
 		</div>
 	</div>
@@ -158,14 +175,20 @@
 
 		<div class="card-body">
 			<h5 class="card-title">Monkey D Luffy</h5>
-			<p class="card-text"id="monP">Wanted : 3.000.000.000</p>
+			<p class="card-text"id="monP">Wanted : 3000000000</p>
 			
 				<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#Luffy">
 					Voir Luffy
 				</button>
 				
 				<button type="button" class="btn btn-warning" onclick="ChangerPrix()">
-					Voir Luffy
+					Reset prix
+				</button>
+				<button type="button" class="btn btn-success" onclick="Up()">
+					Up
+				</button>
+				<button type="button" class="btn btn-danger" onclick="Down()">
+					Down
 				</button>
 				
 			</div>
@@ -260,7 +283,7 @@
 						<th>Statut</th>
 					</tr>
 				</thead>
-				<tbody>
+				<tbody id="tbody-user">
 					<tr>
 						<td>Monkey D Luffy</td>
 						<td>Capitaine</td>
@@ -285,38 +308,71 @@
 	</section>
 
 <!-- Formulaire d'inscription -->
-	<section class="container mt-5">
-		<h2 class="text-center mb-4">Ajouter un nouvel equipage</h2>
-		<form class="border p-4 rounded bg-light">
-			<div class="mb-3">
-				<label class="form-label">Nom</label>
-				<input type="text" class="form-control" placeholder="Entrez le nom" required>
-			</div>
-			<div class="mb-3">
-				<label class="form-label">Bounty</label>
-				<input type="email" class="form-control" placeholder="Entrez l'email" required>
-			</div>
-		
-			<div class="mb-3">
-				<label class="form-label">Rôle</label>
-				<select class="form-select">
-					<option value="admin">Cuisinier</option>
-					<option value="user">Sniper</option>
-				</select>
-			</div>
-			<div class="mb-3">
-				<label class="form-label">Statut</label>
-				<div>
-					<input type="radio" class="btn-check" name="statut" id="actif" checked>
-					<label class="btn btn-outline-success" for="actif">Actif</label>
+<section class="container mt-5">
+	<h2 class="text-center mb-4">Ajouter un nouvel equipage</h2>
+	<form id="formEquipage" class="border p-4 rounded bg-light">
+		<div class="mb-3">
+			<label class="form-label">Nom</label>
+			<input id="inputNom" type="text" class="form-control" placeholder="Entrez le nom" required>
+		</div>
+		<div class="mb-3">
+			<label class="form-label">Bounty</label>
+			<input id="inputBounty" type="text" class="form-control" placeholder="Entrez Bounty" required>
+		</div>
+		<div class="mb-3">
+			<label class="form-label">Rôle</label>
+			<select id="roleEquipage" class="form-select">
+				<option value="admin">Cuisinier</option>
+				<option value="user">Snipper</option>
+			</select>
+		</div>
+		<div class="mb-3">
+			<label class="form-label">Statut</label>
+			<div>
+				<input type="radio" class="btn-check" name="statut" id="actif" value="actif" checked>
+				<label class="btn btn-outline-success" for="actif">Actif</label>
 
-					<input type="radio" class="btn-check" name="statut" id="inactif">
-					<label class="btn btn-outline-danger" for="inactif">Inactif</label>
-				</div>
+				<input type="radio" class="btn-check" name="statut" value="inactif" id="inactif">
+				<label class="btn btn-outline-danger" for="inactif">Inactif</label>
 			</div>
-			<button type="submit" class="btn btn-primary w-100">Ajouter</button>
-		</form>
+		</div>
+		<button type="submit" class="btn btn-primary w-100">Ajouter</button>
+	</form>
 	</section>
+	
+
+	<script>
+		document.getElementById("formEquipage").addEventListener("submit", function(e){
+			e.preventDefault();
+
+			const nom = document.getElementById("inputNom").value;
+			const bounty = document.getElementById("inputBounty").value;
+			const role = document.getElementById("roleEquipage").value;
+			const statut = document.querySelector('input[name = "statut"]:checked').value;
+
+			// console.log("Statut: " + statut);
+
+			const color = statut == "actif" ? `<span class="badge bg-success">Actif</span>` : `<span class="badge bg-danger">Inactif</span>`;
+
+			const tab = document.getElementById("tbody-user");
+			const newElement = document.createElement("tr");
+			newElement.innerHTML = `
+				<td>
+					${nom}
+				</td>
+				<td>
+					${role}
+				</td>
+				<td>
+					${bounty}
+				</td>
+				<td>
+					${color}
+				</td>
+			`
+			tab.appendChild(newElement);
+		});
+	</script>
 
 
 
@@ -361,12 +417,41 @@
 	// Manipulation de DOMs: Document Object Model
 	// j'ai cree une balise <p id="monP">
 	// document.getElementById("monP").innerText = "Wanted : 9.99"
+	let prix = 3000000000;
 
 	function ChangerPrix()
 	{
-		console.log("Click changer prix");
-		document.getElementById("monP").innerText = "Wanted : 9.99"
+		
+		document.getElementById("monP").innerText = "Wanted : 3000000000"
+		prix = 3000000000;
 	}
+
+	function Up()
+	{
+		prix += 1000000;
+		document.getElementById("monP").innerText = "Wanted : " + prix;
+	}
+
+	function Down()
+	{
+		prix -= 1000000;
+		document.getElementById("monP").innerText = "Wanted : " + prix;
+	}
+
+	// Dark Mode
+
+	let isDarkMode = false;
+	const btn = document.getElementById("darkModeBtn");
+
+	btn.addEventListener("click", () => {
+		document.body.classList.toggle("dark-mode");
+
+		btn.textContent = isDarkMode ? "🌘" : "🌖";
+		isDarkMode = !isDarkMode;
+
+		// btn.classList.toggle("btn-success");
+		// btn.classList.toggle("btn-light");
+	});
 
 </script>
 
