ajout .erd pour db tp2

--- a/frontend/bootstrap_01/Bootstrap_Part_1 1.html
+++ b/frontend/bootstrap_01/Bootstrap_Part_1 1.html
@@ -177,7 +177,8 @@
 			<h5 class="card-title">Monkey D Luffy</h5>
 			<p class="card-text"id="monP">Wanted : 3000000000</p>
 			
-				<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#Luffy">
+				<button type="button" class="btn btn-success" data-bs-toggle="modal" 
+					data-bs-target="#Luffy">
 					Voir Luffy
 				</button>
 				
